--- a/Assignment#1/stylesheet.css
+++ b/Assignment#1/stylesheet.css
@@ -84,10 +84,33 @@ html[xmlns] .clearfix { display: block; }
 
 
 h1 {
-	margin-top: 50px;
-	margin-bottom: 25px;
+	margin-top: 30px;
+	margin-left:10px;
 	font-family:Helvetica; Sans-serif;
 	font-weight:600;
 	font-size: 30px;
-	float:left;
+
+}
+
+img {
+	width:50%;
+	height:auto;
+	margin:10px 0 0 10px;
+}
+
+h2 {
+	font-family:Helvetica; Sans-serif;
+	font-weight:200;
+	font-size: 20px;
+	margin-left:10px;
+}
+
+a {
+	font-family:Helvetica; Sans-serif;
+	font-weight:200;
+	font-style: italic;
+	font-size: 20px;
+	color: black;
+	text-decoration: none;
+	margin-left:30px;
 }
