--- a/MAGAZINE/style.css
+++ b/MAGAZINE/style.css
@@ -1,80 +1,176 @@
-* {
-  margin: 0;
-  padding: 0;
+@import url(http://fonts.googleapis.com/css?family=Oswald:300,400,700);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
+
+/* Override UGG site */
+#main {width: 100%; padding:0;}
+.content-asset p {margin:0 auto;}
+.breadcrumb {display:none;}
+
+/* Helpers */
+/**************************/
+.margin-top-10 {padding-top:10px;}
+.margin-bot-10 {padding-bottom:10px;}
+
+/* Typography */
+/**************************/
+#parallax h1 {
+	font-family:'Oswald', sans-serif; 
+	font-size:24px; 
+	font-weight:400; 
+	text-transform: uppercase; 
+	text-align:left; 
+	color:black; 
+	padding:0; 
+	margin:0;
+}
+#parallax h2 {
+	font-family:'Oswald', sans-serif; 
+	font-size:70px; 
+	letter-spacing:10px; 
+	text-align:center; 
+	color:white; 
+	font-weight:400; 
+	text-transform:uppercase; 
+	z-index:10; 
+	opacity:.8;
+}
+#parallax h3 {
+	font-family:'Oswald', sans-serif; 
+	font-size:14px; 
+	line-height:0; 
+	font-weight:400; 
+	letter-spacing:8px; 
+	text-transform: uppercase; 
+	text-align:center; 
+	color:white;
+}
+#parallax p {
+	font-family:'Source Sans Pro', sans-serif; 
+	font-weight:400; 
+	font-size:14px; 
+	line-height:24px;
+}
+.first-character {
+	font-weight:400; 
+	float: left; 
+	font-size: 84px; 
+	line-height: 64px; 
+	padding-top: 4px; 
+	padding-right: 8px; 
+	padding-left: 3px; 
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
-body { font-family: Times; font-size:16px; }
+.N {color: green;}
+.H {color: #480000;}
+.C {color: green;}
 
-.page {
-  position:relative;
-  overflow:hidden;
-  background-color:white;
+/* Section - Title */
+/**************************/
+#parallax .title {
+	background: white; 
+	padding: 60px; 
+	margin:0 auto; 
+	text-align:center;
+}
+	
+#parallax .title h1 {
+	font-size:35px; 
+	letter-spacing:8px;
 }
 
-.full-page {
- height: 100vh;
+
+
+/* Section - Block */
+/**************************/
+#parallax .block {
+	background: white; 
+	padding: 60px; 
+	width:820px; 
+	margin:0 auto; 
+	text-align:justify;
+}
+#parallax .block-gray {
+	background: #f2f2f2;
+	padding: 60px;
+}
+#parallax .section-overlay-mask {
+	position: absolute; 
+	top: 0; 
+	left: 0; 
+	width: 100%; 
+	height: 100%; 
+	background-color: black; 
+	opacity: 0.70;
 }
 
-h1,h2{
-    position:absolute;
-    left:50%;
-    top:50%;
-    transform: translate(-50%, -50%);
-	transition: font-size 2s ease;
-	opacity:0;
-	transition:opacity 2s ease;
+/* Section - Parallax */
+/**************************/
+#parallax .parallax-one {
+	padding-top: 200px; 
+	padding-bottom: 200px; 
+	overflow: hidden; 
+	position: relative; 
+	width: 100%; 
+	background-image: url("images/HWA-killed forest.v2.jpg"); 
+	background-attachment: fixed; 
+	background-size: cover; 
+	-moz-background-size: cover; 
+	-webkit-background-size: cover; 
+	background-repeat: no-repeat; 
+	background-position: top center;
+}
+#parallax .parallax-two {
+	padding-top: 200px; 
+	padding-bottom: 200px; 
+	overflow: hidden; 
+	position: relative; 
+	width: 100%; 
+	background-image: url(images/WollyAdlegidForest.jpg); 
+	background-attachment: fixed; 
+	background-size: cover; 
+	-moz-background-size: cover; 
+	-webkit-background-size: cover; 
+	background-repeat: no-repeat; 
+	background-position: center center;
+}
+#parallax .parallax-three {
+	padding-top: 200px; 
+	padding-bottom: 200px; 
+	overflow: hidden; 
+	position: relative; 
+	width: 100%; 
+	background-image: url(images/HemlockWoollyAdelgid2.jpg); 
+	background-attachment: fixed; 
+	background-size: cover; 
+	-moz-background-size: cover; 
+	-webkit-background-size: cover; 
+	background-repeat: no-repeat; 
+	background-position: center center;
 }
 
-.page1{
-    background-color:blue;
+/* Extras */
+/**************************/
+#parallax .line-break {
+	border-bottom:1px solid black; 
+	width: 150px; 
+	margin:0 auto;
 }
 
-.page2{
-    background-color:red;
+/* Media Queries */
+/**************************/
+@media screen and (max-width: 959px) and (min-width: 768px) {
+  #parallax .block {padding: 40px; width:620px;}
 }
 
-.title {
-  position:absolute;
-  left:50%;
-  top:50%;
-  transform: translate(-50%, -50%);
+@media screen and (max-width: 767px) {
+  #parallax .block {padding: 30px; width:420px;}
+  #parallax h2 {font-size:30px;}
+  #parallax .block {padding: 30px;}
+  #parallax .parallax-one, 
+  #parallax .parallax-two, 
+  #parallax .parallax-three {padding-top:100px; padding-bottom:100px;}
 }
-
-h1.on-page{
-	opacity:1;
-	font-size:100px;
-}
-
-/*------Video------*/
-
-.iframe-wrapper {
-  width:100%;
-  overflow:hidden;
-  position:absolute;;
-  height: 100vh;
-  top:0;
-  left:0;
-}
-
-.iframe-wrapper iframe {
-  position: absolute;
-  top:-10%;
-  left:-20%;
-  width:140%;
-  height:120%;
-}
-
-.iframe-cover {
-  position:relative;;
-  left:0px;
-  top:0px;
-  width:100%;
-  height:100vh;
-  background-color:rgba(255,255,255,1);
-  transition: background-color 4s ease 1s;
-  z-index:2;
-}
-
-.iframe-cover.appeared {
-  background-color:rgba(255,255,255,0.0);
+@media screen and (max-width: 479px) {
+  #parallax .block {padding: 30px 15px; width:290px;}
 }
