--- a/MAGAZINE/style.css
+++ b/MAGAZINE/style.css
@@ -112,7 +112,7 @@
 	overflow: hidden; 
 	position: relative; 
 	width: 100%; 
-	background-image: url("images/HWA-killed forest.v2.jpg"); 
+	background-image: url("images/HemlockWoollyAdelgid2.jpg"); 
 	background-attachment: fixed; 
 	background-size: cover; 
 	-moz-background-size: cover; 
@@ -140,7 +140,7 @@
 	overflow: hidden; 
 	position: relative; 
 	width: 100%; 
-	background-image: url(images/HemlockWoollyAdelgid2.jpg); 
+	background-image: url(images/HWA-killedForest.v2.jpg); 
 	background-attachment: fixed; 
 	background-size: cover; 
 	-moz-background-size: cover; 
