--- a/SearchAssignment/style.css
+++ b/SearchAssignment/style.css
@@ -1,12 +1,42 @@
 
-body {
-  font-family:Arial;
+
+body{
+  background: #333;
 }
 
-.collection {
-  margin: 0 20px;
+#menu{
+  display: inline-block;
+}
+#container{
+  vertical-align: top;
+  margin: 20px;
+  color: #999;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color: #aaa;
 }
 
+#menu-btn{
+  cursor: pointer;
+  margin-left:20px;
+  margin-top:5px;
+}
+
+#menu-list{
+  padding: 50px;
+  margin: 11px 0 0 0;
+  position: absolute;
+  background: #e2e2e2;
+  display: none;
+}
+
+#menu-btn.open + #menu-list{
+  display: block;  
+}
+
+a{
+  color: #57B6FF;
+}
 
 #filter-bar-wrapper {
   height:50px;
@@ -17,37 +47,41 @@ body {
   top:0px;
   left:0px;
   width:100%;
-  background-color:#EEE;
-  text-align:center;
+  background-color:black;
   height:40px;
   padding-top:10px;
   z-index:2;
+  text-decoration:none;
 }
 
 .category {
-  background-color:white;
-  border:0px;
-  border-radius:5px;
-  padding:5px;
+  text-decoration:none;
+  color:black;
+  border:10px;
+  padding-top:25px;
+  padding-bottom:25px;
+
 }
 
 .category.selected {
   background-color:black;
   color:white;
+  border:10px;
+
 }
 
 #search  {
-  padding:5px;
+	float:right;
+    padding:5px;
 }
 
-.item {
+.item { 
+  display:inline-block;
   width: 200px;
   list-style-type:none;
-  background-color:brown;
+  background-color:#f5f5f7;
   padding:20px;
-  float:left;
   cursor:pointer;
-  border-radius:5px;
 }
 
 .red { 
@@ -71,11 +105,14 @@ body {
   width:100%;
   left:0;
   top:0;
-  background-color:rgba(0,0,0,0.7);
+  background-color:rgba(0,0,0,0.9);
   z-index: 3;
   display:none;
 }
 
+.height{
+	text-align:center;
+}
 
 .modal {
   width: 400px;
@@ -95,3 +132,18 @@ body {
 }
 
 .modal img { width:400px; height:400px; }
+
+button {
+	width:200px;
+	padding-top:10px;
+	padding-bottom:10px;
+}
+
+ul {
+	list-style-type: none;
+}
+
+button:active {
+	height:50px;
+	
+}
